pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-324-lists.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/324-lists.md
---
 1. 

    [33m[48;5;236m    foo[K[0m


    bar
